2009-02-17  Federico Mena Quintero  <federico@novell.com>

	* edid-parse.c (decode_edid): Use g_new0() instead of calloc() so
	the caller can keep on using g_free(), and to actually abort on EOM.

2009-02-17  Alexander Larsson  <alexl@redhat.com>

        * gnome-bg.c:
	Allow apps to ignore a pending change so they can avoid updating
	their background twice. (Nautilus needs this)

	Blow all expensive caches if we're not gonna update the background
	again in one minute.

	Do slightly less steps in slide transitions to avoid using to
	much resources on things that are not visible.

	Remove outstanding transitions on finalize

==================== 2.25.91 ====================

==================== 2.25.90 ====================

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c:
	* libgnomeui/gnome-rr-config.h: add deprecation guard

2009-02-03  Federico Mena Quintero  <federico@novell.com>

	Don't break the API/ABI for gnome_rr_config_apply_stored(); just
	deprecate it.

	* gnome-rr-config.c (gnome_rr_config_apply_stored): Remove the
	"filename" argument to avoid breaking the API/ABI.
	(gnome_rr_config_apply_from_filename): New public function that
	takes a filename.

	* libgnomeui/gnome-rr-config.h (gnome_rr_config_apply_from_filename):
	New prototype.

2009-01-27  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=545115 - Ask for
	confirmation, with a timeout, after changing the RANDR
	configuration for if we leave the user with an unusable display.
	This also handles the case where the machine may crash after
	changing the configuration; the old/known-good configuration will
	be restored when the user restarts his session.

	Add public API to get to $(XDG_CONFIG_HOME)/monitors.xml and a
	backup of that file (monitors.xml.backup):

	* libgnomeui/gnome-rr-config.h
	(gnome_rr_config_get_backup_filename,
	gnome_rr_config_get_intended_filename): New prototypes.
